--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/ournet/topics-data#readme",
   "devDependencies": {
     "@types/mongodb": "^3.1.4",
+    "@types/nanoid": "^1.0.0",
     "@types/node": "latest",
     "ava": "^0.25.0",
     "debug": "^3.1.0",
@@ -44,6 +45,7 @@
     "typescript": "latest"
   },
   "dependencies": {
-    "mongodb": "^3.1.3"
+    "mongodb": "^3.1.3",
+    "nanoid": "^1.2.1"
   }
 }
